<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">kechengbao</string>
    <string name="app_name_chinese">课程宝</string>
    <string name="exit">退出</string>
    <!-- STUDENT START -->
    <string name="signbtn">课堂签到</string>
    <string name="testbtn">课堂小测试</string>
    <string name="start">开始签到  </string>
    <string name="check">查看我的签到</string>
    <string name="start1">开始答题</string>
    <string name="check1">查看测试结果</string>
    <!-- STUDENT END -->

   
    <!-- TEACHER START -->


    <!-- register activty start -->

    <string name="myname">课程宝</string>
    <string name="username">用户名</string>
    <string name="password">密码</string>
    <string name="registerin">登陆</string>

    <!-- register activty end -->

   <!-- signclass activty start -->

    <string name="signclass">课堂签到</string>
    <string name="giveupsign">放弃签到</string>
    <string name="getnumber">获取签到数字</string>
    <string name="tipforteacher1">请告诉在场学生本次签到数字为：</string>
    <string name="startsign">开始签到/停止签到</string>
    <string name="tipforteacher2">已经开始签到30秒</string>
    <string name="classrate">本次到课率为70%</string>
    <string name="tipforteacher3">点击按钮可以查看没有到课学生名单</string>
    <string name="finish">完成</string>
    
    <!-- signclass activty end -->
    
    


    <!-- home page activty start -->

    <string name="course_signin">课堂签到</string>
    <string name="course_test">课堂小测试</string>
    <string name="student_center">学生中心</string>
    <string name="begin_signin">开始签到</string>
    <string name="signin_result">查看签到结果</string>
    <string name="begin_test">测试</string>
    <string name="test_result">查看测试</string>
    <string name="hint_studentcenter_search">搜索学生姓名</string>
    <!-- home page activty end -->


    <!-- sign result activity start -->
    <string name="back">返回</string>
    <!-- sign result activity end -->


    <!-- TEACHER END -->

</resources>