<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:ignore="contentDescription" >

    <TextView
        android:id="@+id/textview_appname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name" />

    <ImageView
        android:id="@+id/imageview_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textview_appname"
        android:layout_centerHorizontal="true"
        android:src="@drawable/tch_login" />

    <com.kcb.library.view.FloatingEditText
        android:id="@+id/edittext_id"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/imageview_login"
        android:hint="@string/username"
        android:singleLine="true" />

    <com.kcb.library.view.FloatingEditText
        android:id="@+id/edittext_password"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/edittext_id"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <com.kcb.library.view.PaperButton
        android:id="@+id/buton_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/edittext_password"
        android:text="@string/registerin" />

</RelativeLayout>