<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    <TextView
        android:id="@+id/projectName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:text="@string/app_name"
        android:textSize="20sp" />
    <Button
        android:id="@+id/exitbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/exit"
        android:layout_alignParentRight="true"
        android:textSize="20sp"
        android:layout_alignBaseline="@id/projectName"/>
    <fragment
        android:id="@+id/sign"
        android:layout_below="@id/projectName"
        android:name="com.kcb.student.fragment.SignFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="10" />
    <fragment
        android:id="@+id/test"
        android:layout_below="@id/projectName"
        android:name="com.kcb.student.fragment.TestFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="10" />
    <RadioGroup
        android:id="@+id/bottomRg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.5"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">
        <RadioButton
            android:id="@+id/signbtn"
            android:button="@null"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:checked="true"
            android:textSize="20sp"
            android:gravity="center"
            android:text="@string/signbtn" />
        <RadioButton
            android:id="@+id/testbtn"
            android:button="@null"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:gravity="center"
            android:text="@string/testbtn" />
     </RadioGroup>
</RelativeLayout>
